# capstone-pijak-analisis-sawit

./: .dockerignore  .env.example  .gitignore  Dockerfile  README-backup.md  README.md  check_db_data.py  check_db_data_2.py  clear_db.py  docker-compose.yml  index.html  main.py  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test_activity_logs.py  test_api.py  test_email.py  test_predict_flow.py  test_schema.py
alembic/: env.py
alembic/versions/: 0030ae691918_add_dynamic_dashboard_fields.py  03587d8c6dc9_merge_migration_heads.py  2b9ac34db5da_drop_invitations_table.py  3318cd247430_add_notifications_logs_reports_tables.py  417761cdcdaa_add_multi_tenant_tables.py  6a23d4da3a25_create_activity_logs_table.py  6d08dd7ced94_add_profile_photo_to_users.py  6f58fff38724_make_company_id_nullable_for_personal_.py  93155ea580d2_create_vra_recommendations.py  aa930fe2a137_add_pending_email_to_user.py  b84a95f92ba8_initial_migration.py  ba49bd6e81fe_add_user_model.py  ca944388ba9b_add_profile_photo.py  cb06d2f936d3_remove_pending_email_and_is_active.py  d8eb0d257c34_add_user_id_to_inferencelog_and_report_.py  e5f4b7d910df_add_image_url_to_inference_logs.py  f423dfec5a89_add_profile_and_role_fields.py  f892c4a76e61_add_user_id_multitenancy_logic_remove_.py
app/: main.py
app/api/: health.py  router.py
app/core/: config.py  logging_tasks.py  security.py  websocket.py
app/crud/: crud_user.py
app/db/: base.py  redis.py  session.py
app/models/: __init__.py  company.py  (+8 more)
frontend/: .env.example  .gitignore
src/: App.tsx  index.css  main.tsx
(+66 files in other folders)
