[project]
name = "capstone-projek-pijak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "gunicorn>=26.0.0",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pymysql>=1.1.3",
    "sqlalchemy>=2.0.49",
    "tensorflow>=2.21.0",
    "uvicorn[standard]>=0.46.0",
]
