[project]
name = "capstone-projek-pijak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "cryptography>=48.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "gunicorn>=26.0.0",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "pymysql>=1.1.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "sqlalchemy>=2.0.49",
    "tensorflow>=2.21.0",
    "uvicorn[standard]>=0.46.0",
]
